# dcc-mcp-nuke

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yaml
src/dcc_mcp_nuke/: __init__.py  __version__.py  compositing.py  dispatcher.py  gizmos.py  plugin.py  server.py
src/dcc_mcp_nuke/nuke_plugin/: init.py  menu.py
src/dcc_mcp_nuke/skills/nuke-layered-compositing/: SKILL.md  tools.yaml
src/dcc_mcp_nuke/skills/nuke-layered-compositing/scripts/: build_layered_comp.py  render_write_node.py
src/dcc_mcp_nuke/skills/nuke-node-assets/: SKILL.md  tools.yaml
src/dcc_mcp_nuke/skills/nuke-node-assets/scripts/: gizmo_create_from_group.py  gizmo_instantiate.py  gizmo_validate.py  inspect_gizmo.py  instantiate_gizmo.py  package_gizmo.py
src/dcc_mcp_nuke/skills/nuke-script/: SKILL.md  tools.yaml
src/dcc_mcp_nuke/skills/nuke-script/scripts/: inspect_read_nodes.py  inspect_script.py  list_nodes.py  open_script.py  sample_channel_statistics.py  save_script.py
tests/: test_compositing.py  test_dispatcher.py  test_gizmo_contract.py  test_inspect_read_nodes.py  test_inspect_script.py  test_menu.py  test_node_assets.py  test_open_script.py  test_package.py  test_render_write_node.py  test_sample_channel_statistics.py  test_server.py
tools/: lint_skills.py
