[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-nuke"
version = "0.3.0"
description = "Nuke adapter for the DCC Model Context Protocol ecosystem"
authors = [{ name = "Long Hao", email = "hal.long@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["dcc-mcp-core>=0.19.3,<1.0.0"]
classifiers = ["Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Multimedia :: Graphics"]

[project.optional-dependencies]
dev = ["build", "pytest>=7", "ruff>=0.8", "twine", "pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/dcc-mcp/dcc-mcp-nuke"
Repository = "https://github.com/dcc-mcp/dcc-mcp-nuke"
Issues = "https://github.com/dcc-mcp/dcc-mcp-nuke/issues"

[project.entry-points."dcc_mcp.adapters"]
nuke = "dcc_mcp_nuke:NukeMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_nuke"]
artifacts = ["src/dcc_mcp_nuke/skills/**", "src/dcc_mcp_nuke/nuke_plugin/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]
